@@ -58,6 +58,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import spark.Request;
 import spark.Response;
@@ -113,11 +114,16 @@ public class FilterApiController {
                                 new NoSuchElementException("No content project found with label: " + projectLabel));
 
 
-        List<Long> filterIdsToDetach = dbContentProject.getProjectFilters()
+        // Use only active filters to avoid treating previously detached filters as still attached
+        List<Long> activeFilterIds = dbContentProject.getActiveFilters()
                 .stream()
-                .map(pf -> pf.getFilter().getId())
+                .map(ContentFilter::getId)
+                .collect(Collectors.toList());
+
+        List<Long> filterIdsToDetach = activeFilterIds
+                .stream()
                 .filter(filterId -> !filtersIdToUpdate.contains(filterId))
-                .toList();
+                .collect(Collectors.toList());
         filterIdsToDetach.forEach(filterId -> CONTENT_MGR.detachFilter(
                 projectLabel,
                 filterId,
@@ -126,12 +132,8 @@ public class FilterApiController {
 
         List<Long> filterIdsToAttach = filtersIdToUpdate
                 .stream()
-                .filter(filterId ->
-                        dbContentProject.getProjectFilters()
-                                .stream()
-                                .noneMatch(pf -> pf.getFilter().getId().equals(filterId))
-                )
-                .toList();
+                .filter(filterId -> !activeFilterIds.contains(filterId))
+                .collect(Collectors.toList());
         filterIdsToAttach
                 .forEach(filterId ->
                         CONTENT_MGR.attachFilter(
